0.031 2024-12-19
  [New Features]
    * Add Net::SSLeay#select_next_proto method.
  [Changes]
    * Change the definition of Net::SSLeay::SSL_CTX#set_alpn_select_cb method
      [Before]
        method set_alpn_select_cb : void ($cb : Net::SSLeay::Callback::AlpnSelect);
      [After]
        method set_alpn_select_cb : void ($cb : Net::SSLeay::Callback::AlpnSelect, $arg : object = undef);
  [Incompatible Changes]
    * Change the definition of Net::SSLeay::SSL_CTX#set_alpn_protos method
      [Before]
      method set_alpn_protos : int ($protos : byte[], $protos_len : int = -1);
      [After]
      method set_alpn_protos : int ($protos : string, $protos_len : int = -1);
    * Change the definition of Net::SSLeay::Util#convert_to_wire_format method
      [Before]
      static method convert_to_wire_format : byte[] ($protocols : string[]);
      [After]
      static method convert_to_wire_format : string ($protocols : string[]);
0.030 2024-12-18
  [Bug Fix]
    * Fix bugs of Net::SSLeay#get_SSL_CTX method.
    * Fix bugs of Net::SSLeay#set_msg_callback method.
    * Fix bugs of Net::SSLeay::X509_STORE_CTX#get1_issuer method.
  [Requirement Changes]
    * Require SPVM 0.990033.
  [Test Improvement]
    * Add many tests.
0.029 2024-12-16
  [Bug Fix]
    * Fix bugs of Net::SSLeay#get_certificate method.
    * Fix bugs of Net::SSLeay#get_cert_chaine method.
    * Fix bugs of Net::SSLeay#load_client_CA_file method.
0.028 2024-12-13
  [Bug Fix]
    * Fix bugs of Net::SSLeay#get_SSL_CTX method.
    * Fix bugs of Net::SSLeay#set_SSL_CTX method.
  [Test Improvement]
    * Online tests are skipped in offline systems.
  [Changes]
    * $type argument of Net::SSLeay::SSL_CTX#use_certificate_file method becomes optional.
    * $type argument of Net::SSLeay::SSL_CTX#use_PrivateKey_file method becomes optional.