@@ -627,3 +627,8 @@ OPENSSL_INIT_NO_ATEXIT
 TLSEXT_NAMETYPE_host_name
 EVP_MAX_MD_SIZE
 SSL_MODE_SEND_FALLBACK_SCSV
+SSL_TLSEXT_ERR_OK
+SSL_TLSEXT_ERR_ALERT_FATAL
+SSL_TLSEXT_ERR_NOACK
+OPENSSL_NPN_NEGOTIATED
+OPENSSL_NPN_NO_OVERLAP
